ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: paathshala.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight-service-svc
                port:
                  number: 8081
